backend: Hold reference during force unmount

g_vfs_backend_force_unmount may be called multiple times, or in
parallel with regular unmount operation. Hold backend reference during
the whole force unmount procedure in order to avoid unwanted segfaults.

https://bugzilla.gnome.org/show_bug.cgi?id=777794